# alpr-unconstrained

./: .gitignore  README.md  get-networks.sh  license-plate-detection.py  license-plate-thai-ocr.py  pyproject.toml  run.sh  test_thai_ocr.py  vehicle-detection.py
darknet/: Makefile
