[tool.poetry]
name = "alpr-unconstrained"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
keras = "^2.10.0"
tensorflow-macos = "^2.10.0"
pytesseract = "^0.3.10"
tesserocr = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
